--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ minimal_mistakes_skin    : "contrast" # "air", "aqua", "contrast", "dark", "dirt
 
 # Site Settings
 locale                   : "zh-CN" # en-US
-title                    : "暨南大学"
+title                    : "暨南大学对称密码小组"
 title_separator          : "|"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "宋凌"
