--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,88 +1,97 @@
-# main links
-#main:
-  # - title: "Quick-Start Guide"
-  #   url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
-  # - title: "About"
-  #   url: https://mmistakes.github.io/minimal-mistakes/about/
-  # - title: "Sample Posts"
-  #   url: /year-archive/
-  # - title: "Sample Collections"
-  #   url: /collection-archive/
-  # - title: "Sitemap"
-  #   url: /sitemap/
-
 main:
-- title: "新闻"
-  url: /
-- title: "成员"
-  url: /members/
-- title: "论文"
-  url: /publications/
-- title: "招生"
-  url: /positions/
+  - title: "News"
+    url: /
+  - title: "Members"
+    url: /members/
+  - title: "Publications"
+    url: /publications/
+  - title: "Available Positions"
+    url: /positions/
 
 research:
-- title: "荣誉"
-  children:
-    - title: "荣誉1"
-      url: ""
-    - title: "荣誉2"
-      url: ""
-
+  - title: "Research highlights"
+    children:
+      - title: "Deoxys (CAESAR winner)"
+        url: "https://sites.google.com/view/deoxyscipher"
+      - title: "Skinny"
+        url: "https://sites.google.com/site/skinnycipher/"
+      - title: "GIFT"
+        url: "https://giftcipher.github.io/gift/"
+      - title: "PHOTON (ISO/IEC)"      
+        url: "https://sites.google.com/site/photonhashfunction/"
+      - title: "LED"
+        url: "https://sites.google.com/site/ledblockcipher/"
+      - title: "-> SHA-1 is a Shambles !"
+        url: "https://sha-mbles.github.io/"
+      - title: "SHA-1 free-start col."
+        url: "https://sites.google.com/site/itstheshappening/"
+   
 docs:    
-- title: 新闻
-  url: /
+  - title: News
+    url: /
 
-- title: 成员
-  url: /members/
-      
-- title: 论文
-  url: /publications/
+  - title: Members
+    url: /members/
+        
+  - title: Publications
+    url: /publications/
 
-- title: 招生
-  url: /positions/
-  
+  - title: Available Positions
+    url: /positions/
+    
 docsm:
-- title: 新闻
-  url: /
+  - title: News
+    url: /
 
-- title: 成员
-  url: /members/
-  children:
-    - title: "教师"
-      url: /members/#faculty
-    - title: "博士"
-      url: /members/#phd-students
-    - title: "硕士"
-      url: /members/#master-students
-    - title: "参与团队研究的本科生"
-      url: /members/#undergraduates
-    - title: "访学"
-      url: /members/#visitors      
-    - title: "已毕业学生"
-      url: /members/#alumni 
-      
-- title: 论文
-  url: /publications/
+  - title: Members
+    url: /members/
+    children:
+      - title: "Faculty"
+        url: /members/#faculty
+      - title: "Postdocs"
+        url: /members/#postdocs
+      - title: "Researchers"
+        url: /members/#researchers
+      - title: "PhD Students"
+        url: /members/#phd-students
+      - title: "Visitors"
+        url: /members/#visitors      
+      - title: "Alumni"
+        url: /members/#alumni 
+        
+  - title: Publications
+    url: /publications/
 
-- title: 招生
-  url: /positions/
+  - title: Available Positions
+    url: /positions/
 
 docsp:
-- title: 新闻
-  url: /
+  - title: News
+    url: /
 
-- title: 成员
-  url: /members/
-      
-- title: 论文
-  url: /publications/
-  children:
-    - title: "教师论文"
-      url: /publications/#faculty
-    - title: "学生论文"
-      url: /publications/#student
+  - title: Members
+    url: /members/
+        
+  - title: Publications
+    url: /publications/
+    children:
+      - title: "2019"
+        url: /publications/#2019
+      - title: "2018"
+        url: /publications/#2018
+      - title: "2017"
+        url: /publications/#2017
+      - title: "2016"
+        url: /publications/#2016
+      - title: "2015"
+        url: /publications/#2015
+      - title: "2014"
+        url: /publications/#2014
+      - title: "2013"
+        url: /publications/#2013
+      - title: "2012"
+        url: /publications/#2012
 
-  - title: 招生
-  url: /positions/
+  - title: Available Positions
+    url: /positions/
 
