--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -27,6 +27,9 @@ docs:
 
   - title: 招生信息
     url: /positions/
+
+  - title: 画廊
+    url: /gallery
     
 docsm:
   - title: 新闻
@@ -54,7 +57,8 @@ docsm:
   - title: 招生信息
     url: /positions/
 
-    
+  - title: 画廊
+    url: /gallery
 
 docsp:
   - title: 新闻
@@ -77,4 +81,6 @@ docsp:
 
   - title: 招生信息
     url: /positions/
-
+    
+  - title: 画廊
+    url: /gallery
