--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,8 @@ main:
     url: /publications/
   - title: "招生信息"
     url: /positions/
-
+  - title: "画廊"
+    url: /gallery/
 #research:
 #  - title: "荣誉"
 #    children:
@@ -29,7 +30,7 @@ docs:
     url: /positions/
 
   - title: 画廊
-    url: /gallery
+    url: /gallery/
     
 docsm:
   - title: 新闻
@@ -58,7 +59,7 @@ docsm:
     url: /positions/
 
   - title: 画廊
-    url: /gallery
+    url: /gallery/
 
 docsp:
   - title: 新闻
@@ -83,4 +84,22 @@ docsp:
     url: /positions/
     
   - title: 画廊
-    url: /gallery
+    url: /gallery/
+
+gallery:
+  - url: /assets/images/all-1.jpg
+    image_path: /assets/images/all-1.jpg
+    alt: "placeholder image 1"
+    title: "Image 1 title caption"
+  - url: /assets/images/all-2.jpg
+    image_path: /assets/images/all-2.jpg
+    alt: "placeholder image 2"
+    title: "Image 2 title caption"
+  - url: /assets/images/all-3.jpg
+    image_path: /assets/images/all-3.jpg
+    alt: "placeholder image 3"
+    title: "Image 3 title caption"
+  - url: /assets/images/all-4.jpg
+    image_path: /assets/images/all-4.jpg
+    alt: "placeholder image 4"
+    title: "Image 4 title caption"
