--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@ title                    : "暨南大学对称密码实验室"
 title_separator          : "|"
 name                     : "宋凌"
 description              : "暨南大学对称密码实验室"
-url                      : "https://lingsteam.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://jnu-symmetric-crypto.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "/" # the subpath of your site, e.g. "/blog"
-repository               : "LingsTeam/LingsTeam.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository               : "jnu-symmetric-crypto/jnu-symmetric-crypto.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : "/assets/images/icon.png" # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : "/assets/images/icon.png" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
