--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -37,7 +37,7 @@ docs:
     url: /gallery/
    
   - title: "资料"
-    url: /resouces/
+    url: /resources/
     
   - title: "工具"
     url: /tools/
